# haskell-partition-performance-problem

./: README.org  cabal.project  flake.nix  problem.cabal
src/: Minimal.hs
