cabal-version:   3.0
name:            problem
version:         0.1.0.0
license:         NONE
author:          Philipp Middendorf
maintainer:      philipp.middendorf@desy.de
build-type:      Simple

common warnings
    ghc-options: -Wall -rtsopts -threaded

executable example
    import:           warnings
    main-is:          Minimal.hs
    build-depends:    deepseq
                    , base
                    , vector
                    , directory
                    , filepath
                    , bytestring
                    , parallel
                    , containers
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
